exports[`Scrolex _normalizeOpts should normalize according to the snapshot 1`] = `
Object {
  "components": Array [
    "a",
    "b",
    "c",
  ],
  "indent": 0,
  "mode": "singlescroll",
}
`;

exports[`ScrolexExports exe should accept async/await 1`] = `
"

Starting with runs=1, interval=1000, crash=true
Doing thing 1. fakecmd with runs=1, interval=1000, crash=true done.

. Fault while executing \"FAKECMD_CRASH=1 FAKECMD_RUNS=1 node #{SCROLEX_ROOT}/src/fakecmd.js\". Exit code: 1"
`;

exports[`ScrolexExports exe should accept async/await 2`] = `
"Starting with runs=2, interval=1000, crash=false
Doing thing 1
Doing thing 2. fakecmd with runs=2, interval=1000, crash=false done."
`;

exports[`ScrolexExports exe should accept async/await 3`] = `
"Starting with runs=2, interval=1000, crash=false
Doing thing 1
Doing thing 2. fakecmd with runs=2, interval=1000, crash=false done."
`;

exports[`ScrolexExports exe should accept async/await 4`] = `
"Starting with runs=2, interval=1000, crash=false
Doing thing 1
Doing thing 2. fakecmd with runs=2, interval=1000, crash=false done."
`;

exports[`ScrolexExports exe should accept async/await and catch an error 1`] = `
[Error: 

Starting with runs=1, interval=1000, crash=true
Doing thing 1. fakecmd with runs=1, interval=1000, crash=true done.

. Fault while executing "FAKECMD_CRASH=1 FAKECMD_RUNS=1 node #{SCROLEX_ROOT}/src/fakecmd.js". Exit code: 1]
`;
